syntax = "proto3";
package fsm;
import "github.com/vx-labs/mqtt-protocol/packet/pb.proto";

message RetainedMessageStored { packet.Publish Publish = 1; }
message RetainedMessageDeleted { bytes Topic = 1; }
message SessionCreated {
  string SessionID = 1;
  string ClientID = 2;
  int64 ConnectedAt = 3;
  uint64 Peer = 4;
  packet.Publish LWT = 5;
}
message SessionDeleted {
  string SessionID = 1;
  uint64 Peer = 2;
}
message SubscriptionCreated {
  string SessionID = 1;
  uint64 Peer = 2;
  bytes Pattern = 3;
  int32 Qos = 4;
}
message SubscriptionDeleted {
  string SessionID = 1;
  bytes Pattern = 2;
}

message PeerLost {
  uint64 Peer = 1;
}
message StateTransitionSet { repeated StateTransition events = 1; }

message StateTransition {
  oneof Event {
    RetainedMessageStored RetainedMessageStored = 1;
    RetainedMessageDeleted RetainedMessageDeleted = 2;
    SubscriptionCreated SessionSubscribed = 3;
    SubscriptionDeleted SessionUnsubscribed = 4;
    PeerLost PeerLost = 5;
    SessionCreated SessionCreated = 6;
    SessionDeleted SessionDeleted = 7;
  }
}
